modified:   app/Http/Controllers/ContentController.php 	modified:   public/css/hazimstyle.css 	deleted:    public/js/css3-animate-it.js 	modified:   public/js/hazimmain.js 	modified:   resources/views/dummy.blade.php 	modified:   resources/views/master_public/app.blade.php 	modified:   resources/views/master_public/jscript.blade.php 	modified:   resources/views/public_content/about.blade.php 	modified:   resources/views/public_content/activity.blade.php 	modified:   resources/views/public_content/category.blade.php 	modified:   resources/views/public_content/index.blade.php 	modified:   resources/views/public_content/postActivity.blade.php 	modified:   resources/views/public_content/postCategory.blade.php 	modified:   resources/views/public_content/postSharing.blade.php 	modified:   resources/views/public_content/sharing.blade.php 	modified:   routes/web.php
	public/images/1573914230.png
	public/images/1574443385.png
	public/images/1574443416.png
	public/images/1574446547.jpg
	public/images/BGBM7181.JPG
	public/images/BGHU1329.JPG
	public/images/BJVH8799.JPG
	public/images/IMG_0682.JPG
	public/images/IMG_0683.JPG
	public/images/IMG_3609.JPG
	public/images/IMG_4417.JPG
	public/images/IMG_4417.png
	public/images/IMG_5323.JPG
	public/images/IMG_8837.JPG
	public/images/IMG_9750.JPG
	public/images/LNXD3751.JPG
	public/images/MTEX8197.JPG
	public/images/TNXY8919.JPG
	public/images/WSKS7613.JPG
	public/images/XGRK4395.JPG
	public/images/XOEW7523.JPG
	public/images/XOEW7523.png
	public/images/centos.png
	public/images/ereka.jpg
	public/images/ereka2.jpg
	public/images/ereka3.jpg
	public/images/git.png
	public/images/hedi.png
	public/images/innovate.jpg
	public/images/innovate2.jpg
	public/images/innovate2.png
	public/images/laragon.jpg
	public/images/mara.jpg
	public/images/mara2.jpg
	public/images/mso.png
	public/images/mte.jpg
	public/images/spek.jpg
	public/images/sqlyog.png
	public/images/talk.png
	public/images/talk2.jpg
	public/images/tortoisesvn.png
	public/images/tr

--- a/public/css/hazimstyle.css
+++ b/public/css/hazimstyle.css
@@ -81,9 +81,17 @@ nav ul li a:hover{
      font-family: bauhaus;
      font-size: 65px;
 }
+
+.mob-height{
+    width: 100%;
+}
  @media only screen and (max-width: 600px){
      .main-title{
          font-size: 45px;
+    }
+
+    .mob-height{
+        height: 150px;
     }
 }
  a {
@@ -974,7 +982,12 @@ nav ul li a:hover{
      .counter-box {
          margin-bottom: 1.8rem;
     }
+    .modal-dialog {
+       max-width: 65%;
+       margin: 1.75rem auto;
+    }
 }
+
  @media (min-width: 767px) {
      .about-mf .box-pl2 {
          margin-top: 3rem;
