modified:   app/Http/Controllers/ContentController.php 	modified:   public/css/hazimstyle.css 	new file:   public/images/1574573272.jpg 	new file:   public/images/cpanel.png 	new file:   public/images/deploy.png 	new file:   public/images/design.png 	new file:   public/images/develop.png 	new file:   public/images/intro.png 	new file:   public/images/plan.png 	new file:   public/images/put.jpg 	new file:   public/images/xampplogo.png 	modified:   resources/views/dummy.blade.php 	modified:   resources/views/public_content/about.blade.php 	new file:   resources/views/public_content/history.blade.php 	modified:   resources/views/public_content/index.blade.php 	modified:   routes/web.php

--- a/public/css/hazimstyle.css
+++ b/public/css/hazimstyle.css
@@ -85,6 +85,10 @@ nav ul li a:hover{
 .mob-height{
     width: 100%;
 }
+
+.pop:hover{
+    cursor: pointer;
+}
  @media only screen and (max-width: 600px){
      .main-title{
          font-size: 45px;
