modified:   app/Http/Controllers/Auth/LoginController.php 	modified:   app/Http/Controllers/Auth/RegisterController.php 	modified:   public/css/hazimstyle.css 	modified:   resources/views/auth/login.blade.php 	modified:   resources/views/master_public/app.blade.php 	modified:   resources/views/master_public/head.blade.php 	modified:   resources/views/public_content/about.blade.php 	modified:   resources/views/public_content/history.blade.php 	modified:   resources/views/public_content/index.blade.php
	backup_db/mnh_27112019.sql
	public/font/perfectly.ttf

--- a/public/css/hazimstyle.css
+++ b/public/css/hazimstyle.css
@@ -4,7 +4,7 @@
 }
 @font-face {
  font-family: bauhaus;
- src: url('../font/bauhaus93.ttf');
+ src: url('../font/perfectly.ttf');
 }
 @font-face {
    font-family: romerio ;
@@ -79,7 +79,7 @@ nav ul li a:hover{
 }
  .main-title{
      font-family: bauhaus;
-     font-size: 65px;
+     font-size: 90px;
 }
 
 .mob-height{
@@ -91,7 +91,7 @@ nav ul li a:hover{
 }
  @media only screen and (max-width: 600px){
      .main-title{
-         font-size: 45px;
+         font-size: 65px;
     }
 
     .mob-height{
